sandc/test/fixtures/astRegression/shouldFail/productions/statement/CatchClauseMissingThrowableParam.sand
pub class CatchClauseMissingThrowableParam {
    foo() {
        try {

        } catch {
            
        }
    }
}